--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --mediumgrey: rgb(74, 79, 76);
   --lightgrey: #bdbdbd;
   --textgreen: #10ad3a;
+  --white: #ffffff;
 }
 
 
@@ -23,10 +24,16 @@
   text-decoration: none; 
    color: var(--textgreen);
 }
+.headline h1:hover {
+  color: var(--white);
+  text-decoration: none;
+  box-shadow: 0px 0px 5px var(--textgreen);
+}
 
 h1 {
     margin-bottom: 1.5rem;
 }
+
 
 .navbar {
   display: flex;
