--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,23 @@ h1 {
   box-shadow: 0px 0px 5px var(--textgreen);
   background-color: var(--mediumgrey);
 }
+
+.formHabit {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.habitItem {
+  border: 2px solid black;
+  padding-bottom: 10px;
+  text-align: center;
+  width: 30%;
+  margin-left: 35%;
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.habitPage {
+  text-align: center;
+}
