Fixade lite styling till Home, samt priority logik.

--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,14 @@ h1 {
 .habitPage {
   text-align: center;
 }
+
+.lists {
+  display: flex;
+  justify-content: space-evenly;
+
+}
+.listHome {
+}
+
+.listItem {
+}
