--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   transition: 0.2s;
 }
 
+
 :root {
   --darkgrey: #4d544f;
   --mediumgrey: rgb(74, 79, 76);
@@ -68,6 +69,16 @@ h1 {
   margin-left: 35%;
   list-style: none;
   margin-bottom: 10px;
+  margin-top: 10px;
+  border-radius: 10px;
+  background-color: rgb(71, 77, 71);
+  color: white;
+}
+
+
+.ttons {
+  color: white;
+
 }
 
 .habitPage {
