--- a/src/App.css
+++ b/src/App.css
@@ -65,14 +65,31 @@ h1 {
   border: 2px solid black;
   padding-bottom: 10px;
   text-align: center;
-  width: 30%;
-  margin-left: 35%;
+  width: 500px;
   list-style: none;
   margin-bottom: 10px;
   margin-top: 10px;
   border-radius: 10px;
   background-color: rgb(71, 77, 71);
   color: white;
+}
+.habitTitle {
+
+  text-align: center;
+}
+.sortAndFilterSection {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+.habitSection {
+width: 50%;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+}
+.habitsContainer {
+  display: flex;
 }
 
 
